--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -300,7 +300,7 @@
                         <div class="col-md-3">
                                 <div class="mb-3">
                                     <label for="bk_total" class="form-label">Total Rental/Rs:</label>
-                                    <input type="text" class="form-control bg-dark text-light font-weight-bold" id="bk_total" name="bk_total" required placeholder="0.00">
+                                    <input type="text" class="form-control bg-dark text-light border-danger font-weight-bold" id="bk_total" name="bk_total" required placeholder="0.00">
                                     <small>Without Extra KM</small>
                                 </div>
                         </div>
@@ -465,22 +465,30 @@
             <table class="table shadow table-light">
                 <thead class="thead-dark">
                 <tr>
-                    <th scope="col">Booking ID</th>
-                    <th scope="col">Customer</th>
-                    <th scope="col">Car</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">Cus-NIC</th>
+                    <th scope="col">Cus-Name</th>
+                    <th scope="col">Car-No</th>
+                    <th scope="col">Car Make</th>
+                    <th scope="col">Car Model</th>
                     <th scope="col">Start Date</th>
                     <th scope="col">End Date</th>
+                    <th scope="col">Total</th>
                     <th scope="col">Option</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody id="tblDriverSchedule">
                 <tr>
                     <td>BK-001</td>
+                    <td>200113203389</td>
                     <td>Saman Kumara</td>
                     <td>KL-1234</td>
+                    <td>BMW</td>
+                    <td>M5 / Auto</td>
                     <td>2023-02-15</td>
                     <td>2023-03-16</td>
-                    <td><button class="btn-sm btn-success">Get Job</button></td>
+                    <td>186000</td>
+                    <td><button class="btn-sm btn-success btnGetJob">Get Job</button></td>
                 </tr>
                 </tbody>
             </table>
@@ -516,7 +524,7 @@
     let baseURL = "http://localhost:8080/BackEnd_war/"
     let originUserId = null;
 
-    // getCarsForCards();
+    getCarsForCards();
     rentModalOpen();
 
 
@@ -544,6 +552,7 @@
             $('.bd-booking-modal-lg').modal();
         });
     }
+
 
 
     $("#btnLogin").click(function (){
@@ -669,13 +678,13 @@
                     let carAvail = c.cr_avail;
 
                     if (carType == "General"){
-                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Genaral/alto-m/4.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'><small>Rent</small></button></div></div></div></div>";
+                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Genaral/alto-m/4.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><section><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'>Rent</button></div><small class='d-flex justify-content-center text-muted'>"+carReg+"</small></section></div></div></div>";
                         $("#cardCars").append(card);
                     }if (carType == "Premium"){
-                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Premium/allion/3.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'><small>Rent</small></button></div></div></div></div>";
+                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Premium/allion/3.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><section><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'>Rent</button></div><small class='d-flex justify-content-center text-muted'>"+carReg+"</small></section></div></div></div>";
                         $("#cardCars").append(card);
                     }if (carType == "Luxury"){
-                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Luxury/i8/2.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'><small>Rent</small></button></div></div></div></div>";
+                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Luxury/i8/2.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><section><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'>Rent</button></div><small class='d-flex justify-content-center text-muted'>"+carReg+"</small></section></div></div></div>";
                         $("#cardCars").append(card);
                     }
 
