--- a/FrontEnd/adminDashboard.html
+++ b/FrontEnd/adminDashboard.html
@@ -36,6 +36,10 @@
       background: #ffc107;
     }
 
+    .tablePendingBooking{
+      font-size: 15px;
+    }
+
 
   </style>
 
@@ -141,42 +145,49 @@
 
 <!--  booking table-->
   <div>
-    <table class="table shadow">
+    <table class="table shadow tablePendingBooking">
       <thead class="thead-dark">
       <tr>
         <th scope="col">ID</th>
-        <th scope="col">Customer</th>
+        <th scope="col">Cus-NIC</th>
+        <th scope="col">Cus-Name</th>
+        <th scope="col">Car-No</th>
+        <th scope="col">Car-Brand</th>
+        <th scope="col">Model</th>
+        <th scope="col">With Driver</th>
+        <th scope="col">Driver-LIC</th>
+        <th scope="col">Driver-Name</th>
         <th scope="col">Start Date</th>
         <th scope="col">End Date</th>
-        <th scope="col">Total</th>
+        <th scope="col">Rental</th>
         <th scope="col">Option</th>
       </tr>
       </thead>
-      <tbody>
-      <tr>
-        <th scope="row">BK001</th>
-        <td>Saman</td>
-        <td>2023-02-15</td>
-        <td>2023-03-15</td>
-        <td>34000</td>
-        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>
-      </tr>
-      <tr>
-        <th scope="row">BK002</th>
-        <td>Kamal</td>
-        <td>2023-02-16</td>
-        <td>2023-03-15</td>
-        <td>34000</td>
-        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>
-      </tr>
-      <tr>
-        <th scope="row">BK003</th>
-        <td>Yomal</td>
-        <td>2023-02-17</td>
-        <td>2023-03-15</td>
-        <td>34000</td>
-        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>
-      </tr>
+      <tbody id="tblPendingBooking">
+<!--      <tr>-->
+<!--        <th scope="row">BK001</th>-->
+<!--        <td>Saman</td>-->
+<!--        <td>2023-02-15</td>-->
+<!--        <td>2023-03-15</td>-->
+<!--        <td>34000</td>-->
+<!--        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>-->
+<!--      </tr>-->
+<!--      <tr>-->
+<!--        <th scope="row">BK002</th>-->
+<!--        <td>Kamal</td>-->
+<!--        <td>2023-02-16</td>-->
+<!--        <td>2023-03-15</td>-->
+<!--        <td>34000</td>-->
+<!--        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>-->
+<!--      </tr>-->
+<!--      <tr>-->
+<!--        <th scope="row">BK003</th>-->
+<!--        <td>Yomal</td>-->
+<!--        <td>2023-02-17</td>-->
+<!--        <td>2023-03-15</td>-->
+<!--        <td>34000</td>-->
+<!--        <td><button class="btn-sm btn-danger mr-1">Cancel</button><button class="btn-sm btn-success">Approve</button></td>-->
+<!--      </tr>-->
       </tbody>
     </table>
   </div>
@@ -395,46 +406,46 @@
     <div class="mt-md-4 mb-md-4">
       <h1>Customers</h1>
       <div class="row ">
-        <div class="col-5">
-          <form id="fromCustomer">
-            <div class="form-group">
-              <label for="cus_nic">NIC Number:</label>
-              <input type="text" class="form-control" id="cus_nic" name="cus_nic" required>
-            </div>
-            <div class="form-group">
-              <label for="cus_name">Name:</label>
-              <input type="text" class="form-control" id="cus_name" name="cus_name" required>
-            </div>
-            <div class="form-group">
-              <label for="cus_address">Address:</label>
-              <input type="text" class="form-control" id="cus_address" name="cus_address" required>
-            </div>
-            <div class="row">
-              <div class="col form-group">
-                <label for="cus_contact">Contact Number:</label>
-                <input type="text" class="form-control" id="cus_contact" name="cus_contact" required>
-              </div>
-              <div class="col form-group">
-              <label for="cus_email">Email:</label>
-              <input type="email" class="form-control" id="cus_email" name="cus_email" required>
-            </div></div>
+<!--        <div class="col-5">-->
+<!--          <form id="fromCustomer">-->
+<!--            <div class="form-group">-->
+<!--              <label for="cus_nic">NIC Number:</label>-->
+<!--              <input type="text" class="form-control" id="cus_nic" name="cus_nic" required>-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--              <label for="cus_name">Name:</label>-->
+<!--              <input type="text" class="form-control" id="cus_name" name="cus_name" required>-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--              <label for="cus_address">Address:</label>-->
+<!--              <input type="text" class="form-control" id="cus_address" name="cus_address" required>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--              <div class="col form-group">-->
+<!--                <label for="cus_contact">Contact Number:</label>-->
+<!--                <input type="text" class="form-control" id="cus_contact" name="cus_contact" required>-->
+<!--              </div>-->
+<!--              <div class="col form-group">-->
+<!--              <label for="cus_email">Email:</label>-->
+<!--              <input type="email" class="form-control" id="cus_email" name="cus_email" required>-->
+<!--            </div></div>-->
 
-            <div class=" form-group">
-              <label for="cus_img">NIC Image:</label>
-              <input type="file" class="form-control-file" id="cus_img" accept="image/*" required>
-            </div>
-            <button type="button" class="btn btn-success" id="btnSaveCus">Save</button>
-            <button type="button" class="btn btn-warning" id="btnUpdateCus">Update</button>
-            <button type="button" class="btn btn-danger btnDeleteCus" >Remove</button>
-          </form>
-        </div>
+<!--            <div class=" form-group">-->
+<!--              <label for="cus_img">NIC Image:</label>-->
+<!--              <input type="file" class="form-control-file" id="cus_img" accept="image/*" required>-->
+<!--            </div>-->
+<!--            <button type="button" class="btn btn-success" id="btnSaveCus">Save</button>-->
+<!--            <button type="button" class="btn btn-warning" id="btnUpdateCus">Update</button>-->
+<!--            <button type="button" class="btn btn-danger btnDeleteCus" >Remove</button>-->
+<!--          </form>-->
+<!--        </div>-->
 
 
 
 
 
         <!--  Customer table-->
-        <div class="col-7">
+        <div class="col">
           <table class="table shadow">
             <thead class="thead-dark">
             <tr>
@@ -560,11 +571,13 @@
   getCusCount();
   getDrCount()
   getCarCount();
+  getBookingCount();
 
 
   getAllCustomers();
   getAllDrivers();
   getAllCars();
+  getAllBooking();
 
   cusBindRowClickEvents();
   carBindRowClickEvents();
@@ -1218,6 +1231,134 @@
 
   }
 
+  // Booking
+  function getBookingCount() {
+    $.ajax({
+      url: baseURL + "booking/count",
+      method: 'get',
+      dataType: 'json',
+      success: function (res) {
+        if (res.data < 10) {
+          $("#txtCountBk").text("0" + res.data);
+        } else {
+          $("#txtCountBk").text(res.data);
+        }
+
+      },
+      error: function (error) {
+        let message = JSON.parse(error.responseText).message;
+        alert(message);
+      }
+    });
+  }
+
+  function getAllBooking(){
+    $("#tblPendingBooking").empty();
+    $.ajax({
+      url: baseURL + "booking/getall",
+      method: 'get',
+      dataType: 'json',
+      success: function (res) {
+        for (let c of res.data) {
+          let bkId = c.bk_id;
+          let bkCusnic = c.bk_cusnic;
+          let bkCusname = c.bk_cusname;
+          let bkCarreg = c.bk_carreg;
+          let bkCarmake = c.bk_carmake;
+          let bkModel = c.bk_model;
+          let bkWithdriver = c.bk_withdriver;
+          let bkDrlic = c.bk_drlic;
+          let bkDrname = c.bk_drname;
+          let bkDate = c.bk_date;
+          let bkNdate = c.bk_ndate;
+          let bkTotal = c.bk_total;
+          let bkAdminstatus = c.bk_adminstatus;
+          if (bkAdminstatus == "Pending"){
+            let row = "<tr><td>" + bkId + "</td><td>" + bkCusnic + "</td><td>" + bkCusname + "</td><td>" + bkCarreg + "</td><td>" + bkCarmake + "</td><td>" + bkModel + "</td><td>" + bkWithdriver + "</td><td>" + bkDrlic + "</td><td>" + bkDrname + "</td><td>" + bkDate + "</td><td>" + bkNdate + "</td><td>" + bkTotal + "</td><td><button class='btn-sm btn-danger btnReject mr-1'>Reject</button><button class='btn-sm btn-success btnApprove'>Approve</button></td></tr>";
+            $("#tblPendingBooking").append(row);
+          }
+
+        }
+
+      },
+      error: function (error) {
+        let message = JSON.parse(error.responseText).message;
+        alert(message);
+      }
+    });
+  }
+
+  $(document).on('click', '.btnApprove', function () {
+    let bk_id = $(this).closest('tr').find('td:first').text();
+    console.log(bk_id)
+    $.ajax({
+      url: baseURL + "booking/findbooking?bk_id="+bk_id,
+      method: "get",
+      success: function (resp) {
+
+        aprovedBookingObj = {
+          bk_id: resp.data.bk_id,
+          bk_cusnic: resp.data.bk_cusnic,
+          bk_cusname: resp.data.bk_cusname,
+          bk_carreg: resp.data.bk_carreg,
+          bk_carmake: resp.data.bk_carmake,
+          bk_model: resp.data.bk_model,
+          bk_withdriver: resp.data.bk_withdriver,
+          bk_drlic: resp.data.bk_drlic,
+          bk_drname: resp.data.bk_drname,
+          bk_date: resp.data.bk_date,
+          bk_ndate: resp.data.bk_ndate,
+          bk_total: resp.data.bk_total,
+          bk_adminstatus: "Approved"
+        }
+
+
+
+        $.ajax({
+          url: baseURL + "booking/update",
+          method: "PUT",
+          data: JSON.stringify(aprovedBookingObj),
+          contentType: "application/json",
+          dataType: "json",
+          success: function (resp) {
+            console.log(resp.message);
+            getAllBooking();
+            $("#warningModal").modal();
+            $("#txtWarningHeader").text("Success");
+            $("#txtWarning").text(resp.message);
+          }
+        });
+
+      },
+      error: function (error) {
+        let message = JSON.parse(error.responseText).message;
+        $("#warningModal").modal();
+        $("#txtWarningHeader").text("Error");
+        $("#txtWarning").text(message);
+      }
+    });
+  });
+
+  $(document).on('click', '.btnReject', function () {
+    let bk_id = $(this).closest('tr').find('td:first').text();
+
+    $.ajax({
+      url: baseURL + "booking/delete?bk_id=" + bk_id,
+      method: 'delete',
+      success: function (resp) {
+        getAllBooking();
+        $("#warningModal").modal();
+        $("#txtWarningHeader").text("Success");
+        $("#txtWarning").text(resp.message);
+      },
+      error: function (error) {
+        let message = JSON.parse(error.responseText).message;
+        $("#warningModal").modal();
+        $("#txtWarningHeader").text("Error");
+        $("#txtWarning").text(message);
+      }
+    });
+  });
 
 
 
